--- a/app/globals.css
+++ b/app/globals.css
@@ -2,32 +2,46 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+.magicpattern {
+  width: 110%;
+  height: 110%;
+  background-size: contain;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-image: url("data:image/svg+xml;utf8,%3Csvg viewBox=%220 0 1000 1000%22 xmlns=%22http:%2F%2Fwww.w3.org%2F2000%2Fsvg%22%3E%3Cdefs%3E%3ClinearGradient id=%22c%22 gradientTransform=%22rotate(-45 .5 .5)%22%3E%3Cstop offset=%220%25%22 stop-color=%22%23FF3CAC%22%2F%3E%3Cstop offset=%2250%25%22 stop-color=%22%23784BA0%22%2F%3E%3Cstop offset=%22100%25%22 stop-color=%22%232b86c5%22%2F%3E%3C%2FlinearGradient%3E%3CclipPath id=%22b%22%3E%3Cpath fill=%22currentColor%22 d=%22M776.5 620Q638 740 496 746T211.5 626Q69 500 190 336.5t330-198Q729 104 822 302t-45.5 318Z%22%2F%3E%3C%2FclipPath%3E%3Cfilter id=%22a%22 x=%22-50vw%22 y=%22-50vh%22 width=%22100vw%22 height=%22100vh%22%3E%3CfeFlood flood-color=%22%23fff%22 result=%22neutral-gray%22%2F%3E%3CfeTurbulence type=%22fractalNoise%22 baseFrequency=%222.5%22 numOctaves=%22100%22 stitchTiles=%22stitch%22 result=%22noise%22%2F%3E%3CfeColorMatrix in=%22noise%22 type=%22saturate%22 values=%220%22 result=%22destaturatedNoise%22%2F%3E%3CfeComponentTransfer in=%22desaturatedNoise%22 result=%22theNoise%22%3E%3CfeFuncA type=%22table%22 tableValues=%220 0 0.1 0%22%2F%3E%3C%2FfeComponentTransfer%3E%3CfeBlend in=%22SourceGraphic%22 in2=%22theNoise%22 mode=%22soft-light%22 result=%22noisy-image%22%2F%3E%3C%2Ffilter%3E%3C%2Fdefs%3E%3Cg filter=%22url(%23a)%22 clip-path=%22url(%23b)%22%3E%3Cpath fill=%22url(%23c)%22 d=%22M776.5 620Q638 740 496 746T211.5 626Q69 500 190 336.5t330-198Q729 104 822 302t-45.5 318Z%22%2F%3E%3C%2Fg%3E%3C%2Fsvg%3E");
+  position: absolute;
+  animation: example 10s ease-in-out infinite;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
+@keyframes example {
+  0% {
+    transform: translate(0deg);
+    transform: skew(0deg, 0deg);
+    scale: 1.2;
+    opacity: 1;
   }
-}
-
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
-}
-
-@layer utilities {
-  .text-balance {
-    text-wrap: balance;
+  25% {
+    transform: translate(90deg);
+    transform: skew(-10deg, -10deg);
+    scale: 1.1;
+    opacity: 0.7;
+  }
+  50% {
+    transform: translate(145deg);
+    transform: skew(0deg, 0deg);
+    scale: 1.2;
+    opacity: 0.5;
+  }
+  75% {
+    transform: translate(190deg);
+    scale: 1.1;
+    transform: skew(6deg, 5deg);
+    opacity: 0.7;
+  }
+  100% {
+    transform: translate(360deg);
+    transform: skew(0deg, 0deg);
+    scale: 1.2;
+    opacity: 1;
   }
 }
