--- a/app/globals.css
+++ b/app/globals.css
@@ -45,3 +45,16 @@
     opacity: 1;
   }
 }
+
+.rotationalImage {
+  animation: imgrotate 30s linear infinite;
+}
+
+@keyframes imgrotate {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
